new post it button at the bottom 2

--- a/src/app/bsr/bsr.component.html
+++ b/src/app/bsr/bsr.component.html
@@ -89,10 +89,10 @@
         </div>
       </div> -->
 
-      <button class="fullscreen" (click)="openFullscreen()"  matTooltip="FullScreen" matTooltipPosition="top" mat-icon-button color="warn" aria-label="aria">
+      <button class="fullscreen" (click)="openFullscreen()"  matTooltip="FullScreen" matTooltipPosition="above" mat-icon-button color="warn" aria-label="aria">
         <mat-icon class="full-icon">fullscreen</mat-icon>
       </button>
-      <button class="fullscreen2" (click)="newBlankPostIt()"  matTooltip="new post=it" matTooltipPosition="top" mat-icon-button color="warn" aria-label="aria">
+      <button class="fullscreen2" (click)="newBlankPostIt()"  matTooltip="new post=it" matTooltipPosition="above" mat-icon-button color="warn" aria-label="aria">
         <mat-icon class="full-icon">note_add</mat-icon>
       </button>
       <!-- PRESENTATION -->
