--- a/src/app/bsr/bsr.component.html
+++ b/src/app/bsr/bsr.component.html
@@ -116,7 +116,7 @@
           mat-icon-button color="warn" aria-label="aria">
           <mat-icon class="full-icon">lightbulb_outline</mat-icon>
         </button>
-        <button *ngIf="createPostIt" (click)="newBlankPostIt()" matTooltip="new post=it" matTooltipPosition="above"
+        <button *ngIf="createPostIt" (click)="newBlankPostIt()" matTooltip="new post" matTooltipPosition="above"
           mat-icon-button color="warn" aria-label="aria">
           <mat-icon class="full-icon">note_add</mat-icon>
         </button>
