--- a/src/app/bsr/bsr.component.html
+++ b/src/app/bsr/bsr.component.html
@@ -356,7 +356,7 @@
                       left: 0px;">play_arrow</mat-icon>
                     </button>
                     <p *ngIf="!isNSR" style="position: absolute;
-                    top: 60px;">www.mynamepage.com/{{projectId}}</p>
+                    top: 60px;">www.mynamepage.com/{{projectName}}</p>
                   </form>
                 </div>
 
@@ -393,7 +393,7 @@
                       left: 0px;">play_arrow</mat-icon>
                     </button>
                     <p style="position: absolute;
-                    top: 60px;">www.mynamepage.com/{{projectId}}</p>
+                    top: 60px;">www.mynamepage.com/{{projectName}}</p>
                   </form>
                 </div>
               </div>
