--- a/src/app/bsr/editPost-it.html
+++ b/src/app/bsr/editPost-it.html
@@ -155,7 +155,7 @@
 
             <div flex="" class="text-center flex" style="margin:0 18px">
                 <p>1. Access
-                    www.mynamepage.com/{{projectId}}</p>
+                    {{myAngularxQrCode}}</p>
                 <img class="instruction-style " src="assets/img/bsr/login_page.JPG" alt="Login">
             </div>
             <div flex="" class="text-center flex" style="margin-right:10px">
