--- a/src/app/nw3/nw3.component.scss
+++ b/src/app/nw3/nw3.component.scss
@@ -66,12 +66,12 @@
     }
 
     .voteIconButton:hover {
-        transform: scale(2.1);
-        color: red;
+        // transform: scale(2.1);
+        // color: red;
     }
 
-    .voteIconButton{
-        color: darkblue;
+    .voteIconButton {
+        // color: darkblue;
         outline: none;
         width: 40px;
         height: 40px;
@@ -79,7 +79,7 @@
     }
 
     .GO {
-        @include BoxShadow(6);
+        @include BoxShadow(4);
         width: 70px;
         height: 70px;
         border: 5px solid darkblue;
@@ -148,28 +148,57 @@
     transition: all 0.1s ease-in-out;
 }
 
-// theme
-$postItHeaderColors2: #d6f8fd, #dcd6fd, #d6fde9, #fdfcd6, #d6f8fd, #fdd6e8, #fddfd6, #d6f8fd, #d6f8fd;
-$postItHeaderColorsLength: length($postItHeaderColors2);
-.post-it-list-theme {
-    @for $i from 1 through 8 {
-        &:nth-of-type(#{$postItHeaderColorsLength}n + #{$i}) .post-card {
-            background: nth($postItHeaderColors2, $i);
-            // animation: nth($postItanimations, $i) 0.2s;
-            animation: fadeIn 0.2s ease-in-out backwards;
-            animation-iteration-count: 1;
-            animation-delay: $i * 0.05 + s;
-        }
+.menu-left-icon {
+    position: absolute;
+    right: 330px;
+    top: 45%;
+    outline: none;
+}
+.menu-right-icon {
+    position: absolute;
+    left: 331px;
+    top: 45%;
+    outline: none;
+}
 
-        &:nth-of-type(#{$postItHeaderColorsLength}n + #{$i}) .post-card:hover {
-            // background: nth($postItHeaderColors, $i);
-            // -o-transform: rotate(4deg);
-            // -webkit-transform: rotate(4deg);
-            transform: rotate(1deg);
-            position: relative;
-            top: -2px;
-            background: lightgoldenrodyellow;
-            // animation: nth($postItanimations, $i) 1s;
-        }
+// theme
+$postItHeaderColors2: #05f30d, #f2ce00, #f50c0c, #4c00ff;
+// $postItHeaderColorsLength: length($postItHeaderColors2);
+// .voteIcons {
+//     @for $i from 1 through 4 {
+//         &:nth-of-type(#{$postItHeaderColorsLength}n + #{$i}) .voteIconButton {
+//             color: nth($postItHeaderColors2, $i);
+//             // color: darkblue;
+//             // animation: nth($postItanimations, $i) 0.2s;
+//             animation: fadeIn 0.2s ease-in-out backwards;
+//             animation-iteration-count: 1;
+//             animation-delay: $i * 0.15 + s;
+//         }
+
+//         &:nth-of-type(#{$postItHeaderColorsLength}n + #{$i}) .voteIconButton:hover {
+//             transform: scale(2.1);
+//             color: green;
+//             transform: rotate(2deg);
+//             position: relative;
+//             top: -2px;
+//             background: white;
+//             // animation: nth($postItanimations, $i) 1s;
+//         }
+//     }
+// }
+
+$base-color: #036;
+
+@for $i from 1 through 4 {
+    .voteIconButton:nth-child(#{$i}) {
+        color: nth($postItHeaderColors2, $i);
+    }
+    .voteIconButton:hover:nth-child(#{$i}) {
+        transform: scale(2.1);
+        color: green;
+        transform: rotate(6deg);
+        position: relative;
+        top: -2px;
+        background: white;
     }
 }
